Add CI, edit OpenApi, add test
