# app/api/v1/mixins.py
@@ -1,5 +1,4 @@
 from django.db.models import Model
-from django.forms import model_to_dict
 from rest_framework import serializers, status
 from rest_framework.generics import CreateAPIView
 from rest_framework.response import Response
@@ -14,7 +13,9 @@ class LoginFieldMixin(serializers.ModelSerializer):
     def validate_login(self, login: str) -> str | None:
         if domain.is_valid_login(login):
             return login
-        raise serializers.ValidationError('Login should contain only letters and be 10 characters long')
+        raise serializers.ValidationError(
+            'Login should contain only letters and be 10 characters long'
+        )
 
 
 class CreateMixin(CreateAPIView):
@@ -24,12 +25,15 @@ class CreateMixin(CreateAPIView):
         serializer = self.get_serializer(data=request.data)
         serializer.is_valid(raise_exception=True)
 
-        test = models.Test.objects.get(login=serializer.validated_data.get('login'))
-        iq_test = self.model.objects.create(
-            test_id=test.id, result=serializer.validated_data.get('result')
+        login = serializer.validated_data.get('login')
+        result = serializer.validated_data.get('result')
+
+        test = models.Test.objects.get(login=login)
+        self.model.objects.create(
+            test_id=test.id, result=result
         )
 
-        return Response({**model_to_dict(iq_test)})
+        return Response({'login': login, 'result': result})
 
     def post(self, request, *args, **kwargs):
         login = request.data.get('login')
